Added github in the contact section

--- a/index.html
+++ b/index.html
@@ -230,6 +230,8 @@
                 <a class="contact" href="mailto:nivedithaanand412@gmail.com"><i class="fa fa-envelope">  Email</i></a>
                 <a class="contact" href="https://www.linkedin.com/in/niveditha-anand-7814b6ba"><i class="fa fa-linkedin-square">  LinkedIn</i> </a>
                 <a class="contact" href="tel:+19496876609"><i class="fa fa-phone">  Phone</i> </a>
+                <a class="contact" href="https://github.com/nanan010?tab=repositories"><i class="fa fa-github">  github</i> </a>
+
             </div>
         </footer>
         
